.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thrum-federation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thrum-federation
  template:
    metadata:
      labels:
        app: thrum-federation
    spec:
      containers:
        - name: thrum-federation
          image: us-central1-docker.pkg.dev/instant-binder-438418-d5/thrum-co/thrum-federation-service:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 4000
