.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thrum-federation-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 80
      targetPort: 4242
      protocol: TCP
  selector:
    app: thrum-federation
