.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: thrum-federation-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - secretName: traefik-cert-prod
  rules:
    -  host: dev.quarq.ai
       http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: thrum-federation-service
                port:
                  number: 80
